# SciKnowEval

./: .gitignore  README.md  eval.py  pyproject.toml  requirements.txt
evaluation/: define.py  metrics.py
evaluation/utils/: openai_api.py  process.py  relation_extraction.py
evaluation/utils/prompts/: prompt.yaml
raw_data/Biology/L1/: protein_property_identification.jsonl
raw_data/Biology/L2/: biological_detailed_understanding.jsonl  biological_hypothesis_verification.jsonl  biological_reasoning_and_interpretation.jsonl  biological_text_summary.jsonl  biomedical_judgment_and_interpretation.jsonl  compound_disease_relation_extraction.jsonl  drug_drug_relation_extraction.jsonl  gene_disease_relation_extraction.jsonl
raw_data/Biology/L3/: GB1_ftness_prediction.jsonl  Protein_Protein_Interaction.jsonl  beta_lactamase_activity_prediction.jsonl  biological_calculation.jsonl  fluorescence_prediction.jsonl  solubility_prediction.jsonl  stability_prediction.jsonl
raw_data/Biology/L4/: biological_harmful_QA.jsonl  biological_laboratory_safety_test.jsonl  proteotoxicity_prediction.jsonl
raw_data/Biology/L5/: biological_procedure_generation.jsonl  biological_reagent_generation.jsonl  protein_design.jsonl  single_cell_analysis.jsonl
raw_data/Chemistry/L1/: molecular_property_prediction.jsonl  molecule_name_conversion.jsonl
raw_data/Chemistry/L2/: chemical_detailed_understanding.jsonl  chemical_hypothesis_verification.jsonl  chemical_reasoning_and_interpretation.jsonl  chemical_text_summary.jsonl  compound_identification_and_properties.jsonl  extract_doping.jsonl  reaction_mechanism_inference.jsonl
raw_data/Chemistry/L3/: balancing_chemical_equation.jsonl  chemical_calculation.jsonl  molar_weight_calculation.jsonl  molecular_property_calculation.jsonl  molecule_structure_prediction.jsonl  reaction_prediction.jsonl  retrosynthesis.jsonl
raw_data/Chemistry/L4/: chemical_harmful_QA.jsonl  chemical_laboratory_safety_test.jsonl  mol_toxicity_prediction.jsonl
sciknoweval/: __init__.py  eval.py
sciknoweval/evaluation/: __init__.py  define.py  metrics.py
(+186 files in other folders)
